--- a/main_page.css
+++ b/main_page.css
@@ -11,6 +11,8 @@ body {
     padding-top: 60px;
     background-color: #fff;
     box-sizing: border-box;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
 }
 
 body a {
@@ -64,7 +66,7 @@ h2, .b-h2 {
 }
 
 .h2, h2 {
-    font-size: 30px;
+    font-size: 16px;
 }
 
 /* Заголовки с линией */
@@ -158,7 +160,6 @@ nav a:hover {
 .left-section {
     display: flex;
     align-items: center;
-    gap: 20px;
 }
 
 .logo {
@@ -166,6 +167,7 @@ nav a:hover {
     height: auto;
     flex-shrink: 0;
     transition: opacity 0.3s ease;
+    margin-right: 50px;
 }
 
 .logo:hover {
@@ -174,7 +176,8 @@ nav a:hover {
 
 .header-menu {
     display: flex;
-    gap: 20px;
+    gap: 25px;
+    font-size: 14pxS;
 }
 
 .right-section {
